# rbtree

./: .gitignore  LICENSE  Pipfile  meson.build
.github/workflows/: ci.yml
freebsd/: tree.h
include/: meson.build  rbtree.h  tree.h
man/: meson.build
src/: avltree.c  rbtree.c
tests/: meson.build  subr_tree.c  test_2ptr copy.c  test_2ptr.c  test_3ptr.c  test_regress.c  test_subr.c
